--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.0",
     "react-scripts": "5.0.1",
+    "swiper": "^8.4.4",
     "typeface-roboto": "^1.1.13",
     "web-vitals": "^2.1.4"
   },
