--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.0",
+    "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "swiper": "^8.4.4",
     "typeface-roboto": "^1.1.13",
